--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@sanity/vision": "^3.30.1",
     "i": "^0.3.7",
     "next": "^14.2.13",
+    "next-auth": "^4.24.11",
+    "next-auth-sanity": "^1.5.3",
     "next-sanity": "^8.1.3",
     "react": "^18",
     "react-dom": "^18",
