--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-sanity": "^8.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.0.1",
     "sanity": "^3.30.1"
   },
